@@ -9,15 +9,16 @@ List, source, show and run data cloning examples.
 }
 \usage{
 listDcExamples()
-sourceDcExample(topic, assign.global = TRUE)
+sourceDcExample(topic, envir = parent.frame())
 }
 \arguments{
   \item{topic}{
 character, name of a data set.
 }
-  \item{assign.global}{
-logical, if the object \code{topic} should be assigned to
-the global environment.
+  \item{envir}{
+environment where the object \code{topic} should be assigned to.
+It is the parent frame by default. No assignment is made when
+\code{envir = NULL}.
 }
 }
 \value{
@@ -29,6 +30,7 @@ stored in \code{index.txt}.
 \code{sourceDcExample} sources the example files
 at \pkg{dclone} website at 
 \url{http://dcr.r-forge.r-project.org/examples}.
+Returns the object invisibly.
 
 The default path to the examples directory is stored by the 
 \code{getOption("dcmle.href")} and can be changed if required.
